Fixed howdy overlapping switch on move

--- a/src/style/_howdy.sass
+++ b/src/style/_howdy.sass
@@ -10,7 +10,8 @@ $speed: 2s
   text-transform: uppercase
   font-size: calc(2rem + 5vw)
   text-align: center
-  margin: 0
+  margin: auto
+  width: fit-content
   color: var(--color-primary)
   animation: shadows $speed ease-in infinite, move $speed ease-in infinite
 
